--- a/Maui/SimpleWeather.Maui/Directory.Build.targets
+++ b/Maui/SimpleWeather.Maui/Directory.Build.targets
@@ -5,7 +5,7 @@
         </PropertyGroup>
     </Target>
     <!-- TEMP: Manually copy extensions until AdditionalAppExtensions is fixed -->
-    <Target Name="CopyiPhoneWidgetExtensions" AfterTargets="Build">
+    <Target Name="CopyiPhoneWidgetExtensions" AfterTargets="_PlaceAppExtensions">
        <Message Text="CopyiPhoneWidgetExtensions: Copy widgetExtension to PlugIns"></Message>
        <Exec Condition="'$(Configuration)' == 'Debug'" Command="mkdir -p $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetExtensionDebug.appex" />
        <Exec Condition="'$(Configuration)' == 'Release'" Command="mkdir -p $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetExtension.appex" />
@@ -18,7 +18,7 @@
        <Exec Condition="'$(Configuration)|$(ComputedPlatform)' == 'Release|iPhoneSimulator'" Command="ditto $(MSBuildProjectDirectory)/../SimpleWeather.Maui.AppWidget/DerivedData/SimpleWeather/Build/Products/Release-iphonesimulator/widgetExtension.appex $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetExtension.appex" />
        <Exec Condition="'$(Configuration)|$(_PlatformName)' == 'Release|MacCatalyst'" Command="ditto $(MSBuildProjectDirectory)/../SimpleWeather.Maui.AppWidget/DerivedData/SimpleWeather/Build/Products/Release-maccatalyst/widgetExtension.appex $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetExtension.appex" />
     </Target>
-    <Target Name="CopyiPhoneWidgetIntentExtensions" AfterTargets="Build">
+    <Target Name="CopyiPhoneWidgetIntentExtensions" AfterTargets="_PlaceAppExtensions">
        <Message Text="CopyiPhoneWidgetIntentExtensions: Copy widgetintentExt to PlugIns"></Message>
        <Exec Condition="'$(Configuration)' == 'Debug'" Command="mkdir -p $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetintentExtDebug.appex" />
        <Exec Condition="'$(Configuration)' == 'Release'" Command="mkdir -p $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetintentExt.appex" />
