DevSettings: add support to extract logs

--- a/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Entitlements.plist
@@ -14,5 +14,7 @@
 	<array>
 		<string>group.com.thewizrd.simpleweather</string>
 	</array>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 </dict>
 </plist>
