--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -101,10 +101,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="TimberLog" Version="1.0.0" />
-		<PackageReference Include="CommunityToolkit.Maui" Version="7.0.1" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-		<PackageReference Include="CompiledBindings.MAUI" Version="1.0.17.6" />
+		<PackageReference Include="CompiledBindings.MAUI" Version="1.0.18" />
 		<PackageReference Include="epj.ProgressBar.Maui" Version="1.0.0" />
 		<PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
 		<PackageReference Include="KeyedSemaphores" Version="5.0.0" />
@@ -113,14 +113,14 @@
 		<PackageReference Condition="'$(TargetFramework)' != 'net8.0-maccatalyst' And '$(TargetFramework)' != 'net8.0-ios'" Include="Microsoft.AppCenter.Crashes" Version="5.0.3" />
 		<PackageReference Condition="'$(TargetFramework)' == 'net8.0-maccatalyst' Or '$(TargetFramework)' == 'net8.0-ios'" Include="Microsoft.AppCenter.Analytics" Version="5.0.3-SNAPSHOT" />
 		<PackageReference Condition="'$(TargetFramework)' == 'net8.0-maccatalyst' Or '$(TargetFramework)' == 'net8.0-ios'" Include="Microsoft.AppCenter.Crashes" Version="5.0.3-SNAPSHOT" />
-		<PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.86" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.7" />
-		<PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="2.88.7" />
+		<PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
+		<PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="2.88.8" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.8" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.8" />
-		<PackageReference Include="Mapsui.Maui" Version="4.1.3" />
-		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.2" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Mapsui.Maui" Version="4.1.6" />
+		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 	</ItemGroup>
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
 		<PackageReference Include="Maui.RevenueCat.iOS" Version="4.9.0.2" />
