--- a/SimpleWeather.BackgroundTasks/SimpleWeather.BackgroundTasks.csproj
+++ b/SimpleWeather.BackgroundTasks/SimpleWeather.BackgroundTasks.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="$(WinAppSDKVersion)" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="$(WinSDKBuildToolsVersion)" />
   </ItemGroup>
 
   <ItemGroup>
