--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -41,15 +41,24 @@
     </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
-		<RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
+		<RuntimeIdentifier>ios-arm64</RuntimeIdentifier>
 		<Registrar>static</Registrar>
 		<MtouchExtraArgs>--require-pinvoke-wrappers=true</MtouchExtraArgs>
 		<CreatePackage>false</CreatePackage>
 		<CodesignProvision>SimpleWeather - Debug</CodesignProvision>
 		<CodesignKey>iPhone Developer</CodesignKey>
+		<CustomCommands>
+		  <CustomCommands>
+		    <Command>
+		      <type>BeforeBuild</type>
+		      <command>bash ${SolutionDir}/maui-preparebuild.sh "${ProjectConfig}"</command>
+		      <workingdir>${SolutionDir}</workingdir>
+		    </Command>
+		  </CustomCommands>
+		</CustomCommands>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-ios|AnyCPU'">
-		<RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
+		<RuntimeIdentifier>ios-arm64</RuntimeIdentifier>
 		<WarningLevel>4</WarningLevel>
 		<Registrar>static</Registrar>
 		<MtouchExtraArgs>--require-pinvoke-wrappers=true</MtouchExtraArgs>
@@ -122,6 +131,9 @@
 		<PackageReference Include="Mapsui.Maui" Version="4.1.6" />
 		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.5" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+
+		<PackageReference Include="AathifMahir.Maui.MauiIcons.Cupertino" Version="3.0.0" />
+		<PackageReference Include="AathifMahir.Maui.MauiIcons.Material" Version="3.0.0" />
 	</ItemGroup>
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
 		<PackageReference Include="Maui.RevenueCat.iOS" Version="4.9.0.2" />
@@ -157,9 +169,6 @@
     </ItemGroup>
 	<ItemGroup>
 		<MauiXaml Update="Controls\Banner\BannerContent.xaml">
-			<Generator>MSBuild:Compile</Generator>
-		</MauiXaml>
-		<MauiXaml Update="Controls\KeyEntryPopup.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="Controls\Snackbar\SnackbarContent.xaml">
