--- a/Maui/SimpleWeather.Maui/Directory.Build.targets
+++ b/Maui/SimpleWeather.Maui/Directory.Build.targets
@@ -31,4 +31,20 @@
        <Exec Condition="'$(Configuration)|$(ComputedPlatform)' == 'Release|iPhoneSimulator'" Command="ditto $(MSBuildProjectDirectory)/../SimpleWeather.Maui.AppWidget/DerivedData/SimpleWeather/Build/Products/Release-iphonesimulator/widgetintentExt.appex $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetintentExt.appex" />
        <Exec Condition="'$(Configuration)|$(_PlatformName)' == 'Release|MacCatalyst'" Command="ditto $(MSBuildProjectDirectory)/../SimpleWeather.Maui.AppWidget/DerivedData/SimpleWeather/Build/Products/Release-maccatalyst/widgetintentExt.appex $(MSBuildProjectDirectory)/$(_AppPlugInsPath)widgetintentExt.appex" />
     </Target>
+    <Target Name="_AddSwiftLinkerFlags" Condition="'$(LinkWithSwiftSystemLibraries)' == 'true'" DependsOnTargets="_ParseBundlerArguments;_DetectSdkLocations" BeforeTargets="_LinkNativeExecutable">
+		<PropertyGroup>
+			<_SwiftTargetPlatform Condition="'$(_PlatformName)' == 'iOS' And '$(_SdkIsSimulator)' == 'true'">iphonesimulator</_SwiftTargetPlatform>
+			<_SwiftTargetPlatform Condition="'$(_PlatformName)' == 'iOS' And '$(_SdkIsSimulator)' != 'true'">iphoneos</_SwiftTargetPlatform>
+			<_SwiftTargetPlatform Condition="'$(_PlatformName)' == 'tvOS' And '$(_SdkIsSimulator)' == 'true'">appletvsimulator</_SwiftTargetPlatform>
+			<_SwiftTargetPlatform Condition="'$(_PlatformName)' == 'tvOS' And '$(_SdkIsSimulator)' != 'true'">appletvos</_SwiftTargetPlatform>
+			<_SwiftTargetPlatform Condition="'$(_PlatformName)' == 'MacCatalyst'">macosx</_SwiftTargetPlatform> <!-- yes, 'macosx' and not 'maccatalyst': even though the resulting maccatalyst directory exists, it doesn't have anything useful in it -->
+			<_SwiftTargetPlatform Condition="'$(_PlatformName)' == 'macOS'">macosx</_SwiftTargetPlatform>
+		</PropertyGroup>
+		<ItemGroup>
+			<_CustomLinkFlags Include="-L/usr/lib/swift/" />
+			<_CustomLinkFlags Include="-L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/$(_SwiftTargetPlatform)/" />
+            <_CustomLinkFlags Include="-Wl,-rpath" />
+            <_CustomLinkFlags Include="-Wl,/usr/lib/swift" />
+		</ItemGroup>
+	</Target>
 </Project>
