--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
@@ -67,7 +67,6 @@
 		<CodesignKey>iPhone Developer</CodesignKey>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-maccatalyst|AnyCPU'">
-		<MtouchDebug>true</MtouchDebug>
 		<UseHardenedRuntime>false</UseHardenedRuntime>
 		<RuntimeIdentifier>maccatalyst-arm64</RuntimeIdentifier>
 		<CodesignKey>Mac Developer</CodesignKey>
@@ -115,7 +114,6 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="CompiledBindings.MAUI" Version="1.0.18" />
 		<PackageReference Include="epj.ProgressBar.Maui" Version="1.0.0" />
-		<PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
 		<PackageReference Include="KeyedSemaphores" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Condition="'$(TargetFramework)' != 'net8.0-maccatalyst' And '$(TargetFramework)' != 'net8.0-ios'" Include="Microsoft.AppCenter.Analytics" Version="5.0.3" />
@@ -154,7 +152,7 @@
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\SimpleWeather.Backgrounds\SimpleWeather.Backgrounds.csproj" />
+		<!--<ProjectReference Include="..\..\SimpleWeather.Backgrounds\SimpleWeather.Backgrounds.csproj" />-->
 		<ProjectReference Include="..\..\SimpleWeather.Common\SimpleWeather.Common.csproj" />
 		<ProjectReference Include="..\..\SimpleWeather.Extras\SimpleWeather.Extras.csproj" />
 		<ProjectReference Include="..\..\SimpleWeather.Shared\SimpleWeather.Shared.csproj" />
@@ -285,6 +283,42 @@
 			<DependentUpon>Settings_General.xaml</DependentUpon>
 		</Compile>
 	</ItemGroup>
+	<!-- Firebase Start -->
+	<ItemGroup Condition="$(TargetFramework.Contains('ios')) Or $(TargetFramework.Contains('maccatalyst'))">
+		<PackageReference Include="AdamE.Firebase.iOS.Analytics" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Auth" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Core" Version="10.24.0.1" />
+		<PackageReference Include="AdamE.Firebase.iOS.CloudFirestore" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.CloudMessaging" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Database" Version="10.24.0-alpha1" />
+		<PackageReference Include="AdamE.Firebase.iOS.Installations" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.RemoteConfig" Version="10.24.0-alpha1" />
+		<PackageReference Include="AdamE.Firebase.iOS.Storage" Version="10.24.0" />
+	</ItemGroup>
+	<ItemGroup Condition="$(TargetFramework.Contains('ios'))">
+		<PackageReference Include="AdamE.Firebase.iOS.Crashlytics" Version="10.24.0" />
+	</ItemGroup>
+	<ItemGroup Condition="$(TargetFramework.Contains('maccatalyst'))">
+	    <PackageReference Include="Sentry.Maui" Version="4.6.2" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<BundleResource Include="MaciOS\GoogleService-Info-Dev.plist" Condition="Exists('MaciOS\GoogleService-Info-Dev.plist')">
+			<LogicalName>GoogleService-Info.plist</LogicalName>
+		</BundleResource>
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<BundleResource Include="MaciOS\GoogleService-Info.plist" Condition="Exists('MaciOS\GoogleService-Info.plist')">
+			<LogicalName>GoogleService-Info.plist</LogicalName>
+		</BundleResource>
+	</ItemGroup>
+	<!--https://github.com/xamarin/GoogleApisForiOSComponents/issues/643#issuecomment-1920970044-->
+	<PropertyGroup Condition="$(TargetFramework.Contains('ios'))">
+		<_ExportSymbolsExplicitly>false</_ExportSymbolsExplicitly>
+	</PropertyGroup>
+	<PropertyGroup>
+		<LinkWithSwiftSystemLibraries>true</LinkWithSwiftSystemLibraries>
+	</PropertyGroup>
+	<!-- Firebase End -->
 	<!--
 	<ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios' Or $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">
 		<AdditionalAppExtensions Include="$(MSBuildProjectDirectory)/../SimpleWeather.Maui.AppWidget/widgetExtension">
