--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -30,6 +30,23 @@
     <PackageReference Include="CommunityToolkit.WinUI" Version="7.1.2" />
     <PackageReference Include="Sentry" Version="4.6.2" />
   </ItemGroup>
+	<ItemGroup Condition="$(TargetFramework.Contains('ios')) Or $(TargetFramework.Contains('maccatalyst'))">
+		<PackageReference Include="AdamE.Firebase.iOS.Analytics" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Auth" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Core" Version="10.24.0.1" />
+		<PackageReference Include="AdamE.Firebase.iOS.CloudFirestore" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.CloudMessaging" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Database" Version="10.24.0-alpha1" />
+		<PackageReference Include="AdamE.Firebase.iOS.Installations" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.RemoteConfig" Version="10.24.0-alpha1" />
+		<PackageReference Include="AdamE.Firebase.iOS.Storage" Version="10.24.0" />
+	</ItemGroup>
+	<ItemGroup Condition="$(TargetFramework.Contains('ios'))">
+		<PackageReference Include="AdamE.Firebase.iOS.Crashlytics" Version="10.24.0" />
+	</ItemGroup>
+	<ItemGroup Condition="$(TargetFramework.Contains('maccatalyst'))">
+    <PackageReference Include="Sentry.Maui" Version="4.6.2" />
+	</ItemGroup>
   <ItemGroup Condition="$(TargetFramework.Contains('windows'))">
     <!-- Images -->
     <Content Include="Resources\Images\**" />
@@ -52,8 +69,8 @@
   <ItemGroup>
     <PackageReference Include="CacheCow.Client" Version="2.13.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
-    <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
+    <PackageReference Condition="!$(TargetFramework.Contains('ios')) And !$(TargetFramework.Contains('maccatalyst'))" Include="FirebaseAuthentication.net" Version="4.1.0" />
+    <PackageReference Condition="!$(TargetFramework.Contains('ios')) And !$(TargetFramework.Contains('maccatalyst'))" Include="FirebaseDatabase.net" Version="4.2.0" />
     <PackageReference Condition="'$(TargetFramework)' != 'net8.0-maccatalyst' And '$(TargetFramework)' != 'net8.0-ios'" Include="Microsoft.AppCenter.Analytics" Version="5.0.3" />
     <PackageReference Condition="'$(TargetFramework)' != 'net8.0-maccatalyst' And '$(TargetFramework)' != 'net8.0-ios'" Include="Microsoft.AppCenter.Crashes" Version="5.0.3" />
     <PackageReference Condition="'$(TargetFramework)' == 'net8.0-maccatalyst' Or '$(TargetFramework)' == 'net8.0-ios'" Include="Microsoft.AppCenter.Analytics" Version="5.0.3-SNAPSHOT" />
