--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -109,17 +109,15 @@
 
 	<ItemGroup>
 		<PackageReference Include="TimberLog" Version="1.0.0" />
-		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="9.0.1" />
 		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="CompiledBindings.MAUI" Version="1.0.18" />
-		<PackageReference Include="epj.ProgressBar.Maui" Version="1.0.0" />
+		<PackageReference Include="epj.ProgressBar.Maui" Version="1.0.1" />
 		<PackageReference Include="KeyedSemaphores" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Condition="'$(TargetFramework)' != 'net8.0-maccatalyst' And '$(TargetFramework)' != 'net8.0-ios'" Include="Microsoft.AppCenter.Analytics" Version="5.0.3" />
-		<PackageReference Condition="'$(TargetFramework)' != 'net8.0-maccatalyst' And '$(TargetFramework)' != 'net8.0-ios'" Include="Microsoft.AppCenter.Crashes" Version="5.0.3" />
-		<PackageReference Condition="'$(TargetFramework)' == 'net8.0-maccatalyst' Or '$(TargetFramework)' == 'net8.0-ios'" Include="Microsoft.AppCenter.Analytics" Version="5.0.3-SNAPSHOT" />
-		<PackageReference Condition="'$(TargetFramework)' == 'net8.0-maccatalyst' Or '$(TargetFramework)' == 'net8.0-ios'" Include="Microsoft.AppCenter.Crashes" Version="5.0.3-SNAPSHOT" />
+		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.5" />
+		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.5" />
 		<PackageReference Include="Plugin.Maui.SegmentedControl" Version="1.0.8" />
 		<PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0" />
 		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.8" />
@@ -127,7 +125,7 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.8" />
 		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.8" />
 		<PackageReference Include="Mapsui.Maui" Version="4.1.6" />
-		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.6" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.Cupertino" Version="3.0.0" />
@@ -299,7 +297,7 @@
 		<PackageReference Include="AdamE.Firebase.iOS.Crashlytics" Version="10.24.0" />
 	</ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('maccatalyst'))">
-	    <PackageReference Include="Sentry.Maui" Version="4.6.2" />
+	    <PackageReference Include="Sentry.Maui" Version="4.7.0" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
 		<BundleResource Include="MaciOS\GoogleService-Info-Dev.plist" Condition="Exists('MaciOS\GoogleService-Info-Dev.plist')">
