--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -34,7 +34,11 @@
 
   <!-- Maui -->
   <PropertyGroup>
-      <MauiVersion>8.0.60</MauiVersion>
+      <MauiVersion>8.0.61</MauiVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <SentryVersion>4.8.0</SentryVersion>
   </PropertyGroup>
 
   <PropertyGroup>
