--- a/SimpleWeather.Windows/SimpleWeather.Windows.csproj
+++ b/SimpleWeather.Windows/SimpleWeather.Windows.csproj
@@ -55,7 +55,7 @@
     <PackageReference Include="KeyedSemaphores" Version="5.0.0" />
 		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.5" />
 		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.5" />
-    <PackageReference Include="Sentry" Version="4.7.0" />
+    <PackageReference Include="Sentry" Version="$(SentryVersion)" />
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
       <Version>8.0.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
