--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -42,8 +42,10 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <WinAppSDKVersion>1.5.240428000</WinAppSDKVersion>
+    <WinAppSDKVersion>1.5.240607001</WinAppSDKVersion>
     <WinSDKBuildToolsVersion>10.0.22621.3233</WinSDKBuildToolsVersion>
+    <WinSDKRefVersion>10.0.22621.33</WinSDKRefVersion>
+    <EnableCoreMrtTooling Condition=" '$(BuildingInsideVisualStudio)' != 'true' ">false</EnableCoreMrtTooling>
   </PropertyGroup>
 
   <PropertyGroup>
