--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -147,8 +147,8 @@
 		<PackageReference Include="WinUIEx" Version="2.1.0" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="$(WinAppSDKVersion)" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
+		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="$(WinSDKRefVersion)" />
+		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="$(WinSDKRefVersion)" />
 	</ItemGroup>
 	<ItemGroup>
 		<!--<ProjectReference Include="..\..\SimpleWeather.Backgrounds\SimpleWeather.Backgrounds.csproj" />-->
