--- a/SimpleWeather.Common/SimpleWeather.Common.csproj
+++ b/SimpleWeather.Common/SimpleWeather.Common.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('windows'))">
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="$(WinAppSDKVersion)" />
-    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
-    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
+    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="$(WinSDKRefVersion)" />
+    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="$(WinSDKRefVersion)" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SimpleWeather.Shared\SimpleWeather.Shared.csproj" />
