windows: switch PInvoke library

--- a/SimpleWeather.BackgroundTasks/SimpleWeather.BackgroundTasks.csproj
+++ b/SimpleWeather.BackgroundTasks/SimpleWeather.BackgroundTasks.csproj
@@ -16,14 +16,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.7" />
-    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="$(WinAppSDKVersion)" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="$(WinSDKBuildToolsVersion)" />
+    <PackageReference Include="Vanara.PInvoke.Ole" Version="4.0.2" />
   </ItemGroup>
 
   <ItemGroup>
