--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -42,6 +42,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <WinToolkitVersion>8.0.240109</WinToolkitVersion>
     <WinAppSDKVersion>1.5.240627000</WinAppSDKVersion>
     <WinSDKBuildToolsVersion>10.0.22621.3233</WinSDKBuildToolsVersion>
     <WinSDKRefVersion>10.0.22621.33</WinSDKRefVersion>
