--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -34,11 +34,19 @@
 
   <!-- Maui -->
   <PropertyGroup>
-    <MauiVersion>8.0.90</MauiVersion>
+    <MauiVersion>8.0.91</MauiVersion>
   </PropertyGroup>
 
   <PropertyGroup>
-    <SentryVersion>4.10.2</SentryVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">16.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">16.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.19041.0</SupportedOSPlatformVersion>
+		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.19041.0</TargetPlatformMinVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <SentryVersion>4.11.0</SentryVersion>
   </PropertyGroup>
 
   <PropertyGroup>
