--- a/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
+++ b/Maui/SimpleWeather.Maui/SimpleWeather.Maui.csproj
@@ -279,18 +279,18 @@
 	</ItemGroup>
 	<!-- Firebase Start -->
 	<ItemGroup Condition="$(TargetFramework.Contains('ios')) Or $(TargetFramework.Contains('maccatalyst'))">
-		<PackageReference Include="AdamE.Firebase.iOS.Analytics" Version="10.24.0" />
-		<PackageReference Include="AdamE.Firebase.iOS.Auth" Version="10.24.0" />
-		<PackageReference Include="AdamE.Firebase.iOS.Core" Version="10.24.0.1" />
-		<PackageReference Include="AdamE.Firebase.iOS.CloudFirestore" Version="10.24.0" />
-		<PackageReference Include="AdamE.Firebase.iOS.CloudMessaging" Version="10.24.0" />
-		<PackageReference Include="AdamE.Firebase.iOS.Database" Version="10.24.0-alpha1" />
-		<PackageReference Include="AdamE.Firebase.iOS.Installations" Version="10.24.0" />
-		<PackageReference Include="AdamE.Firebase.iOS.RemoteConfig" Version="10.24.0-alpha1" />
-		<PackageReference Include="AdamE.Firebase.iOS.Storage" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Analytics" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.Auth" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.Core" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.CloudFirestore" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.CloudMessaging" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.Database" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.Installations" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.RemoteConfig" Version="10.24.0.2" />
+		<PackageReference Include="AdamE.Firebase.iOS.Storage" Version="10.24.0.2" />
 	</ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('ios'))">
-		<PackageReference Include="AdamE.Firebase.iOS.Crashlytics" Version="10.24.0" />
+		<PackageReference Include="AdamE.Firebase.iOS.Crashlytics" Version="10.24.0.2" />
 	</ItemGroup>
 	<ItemGroup Condition="$(TargetFramework.Contains('maccatalyst'))">
 	    <PackageReference Include="Sentry.Maui" Version="$(SentryVersion)" />
@@ -310,7 +310,7 @@
 		<_ExportSymbolsExplicitly>false</_ExportSymbolsExplicitly>
 	</PropertyGroup>
 	<PropertyGroup>
-		<LinkWithSwiftSystemLibraries>true</LinkWithSwiftSystemLibraries>
+		<LinkWithSwiftSystemLibraries>false</LinkWithSwiftSystemLibraries>
 	</PropertyGroup>
 	<!-- Firebase End -->
 	<!-- Sentry Start -->
